--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
 				Therefore, we can say that reported crimes did increase under the NDA regime. Does this mean that the actual number of cases also increased during the NDA regime? Cant comment.
 			</p>
 		</article>
+
+		<article>
+			<h4 class="heading">
+				Credits
+			</h4>
+			<p>
+				Template borrowed from Dhruv Agarwal.
+			</p>
+		</article>
 	</div>
 
 </body>
